--- a/admin-core/src/main/resources/templates/common/layout.html
+++ b/admin-core/src/main/resources/templates/common/layout.html
@@ -19,7 +19,8 @@
 	<link rel="stylesheet" type="text/css" href="https://at.alicdn.com/t/font_520106_q8xykrwf86ywrk9.css?v=${jsVer}" media="all"/>
 	<script type="text/javascript" src="${ctxPath}/plugins/layui/layui.js?v=${jsVer}"></script>
 	<script type="text/javascript" src="${ctxPath}/plugins/jquery/jquery.min.js?v=${jsVer}"></script>
-	<link rel="stylesheet" href="${ctxPath}/plugins/ztree/css/zTreeStyle.css?v=${jsVer}" type="text/css">
+	<!--<link rel="stylesheet" href="${ctxPath}/plugins/ztree/css/zTreeStyle.css?v=${jsVer}" type="text/css">-->
+	<link rel="stylesheet" href="${ctxPath}/plugins/ztree/css/metroStyle.css?v=${jsVer}" type="text/css">
 	<script type="text/javascript" src="${ctxPath}/plugins/ztree/js/jquery.ztree.all.min.js?v=${jsVer}"></script>
 	<!-- 业务公用库 -->
 	<script type="text/javascript" src="${ctxPath}/js/common.js?v=${jsVer}"></script>
