--- a/admin-console/src/main/resources/templates/admin/function/add.html
+++ b/admin-console/src/main/resources/templates/admin/function/add.html
@@ -20,7 +20,7 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">功能地址</label>
 			<div class="layui-input-inline">
-				<input type="text" name="accessUrl"  lay-verify="required"
+				<input type="text" name="accessUrl" 
 					placeholder="请输入" autocomplete="off" class="layui-input"
 					value="">
 			</div>
