--- a/admin-core/src/main/resources/templates/common/tag/simpleDataSelect.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/simpleDataSelect.tag.html
@@ -10,23 +10,22 @@ if(has(readonly)){
 	var expected = value!"";
 	for(item in data){
 		if(item[attrId]==expected){
-			selectedDict = item;
+			selectedData = item;
 			break;
 		}
 	}
 -->
-<input type="text"  class="layui-input input-readonly" value="${selectedData[attrName]}"></input>
-<input type="hidden"  name="${name}"  
-					  value="${expected}"></input>
+	<input type="text"  class="layui-input input-readonly" value="${selectedData[attrName]}"></input>
+	<input type="hidden"  name="${name}" value="${expected}"></input>
 <!--#}else{  -->
 
 	<select  name="${name}" ${has(id)?("id="+id):''}>
-	<option  value="">请选择</option>
+		<option  value="">请选择</option>
 	<!--# 
 		var expected = value!"";
 		for(item in data){
 	 -->
-    <option value="${item[attrId]}" ${item[attrId]==expected?'selected'}>${item[attrName]}</option>
+    	<option value="${item[attrId]}" ${item[attrId]==expected?'selected'}>${item[attrName]}</option>
    <!--#}-->
     </select>
  <!--#}  -->
