--- a/admin-core/src/main/resources/templates/core/codeGen/edit.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/edit.html
@@ -72,7 +72,7 @@
 				<label class="layui-form-label">系统包名</label>
 				<div class="layui-input-inline">
 					<input type="text" name="basePackage"
-						value="cn.wlyoa.dnjd" class="layui-input">
+						value="com.ibeetl.cms" class="layui-input">
 				</div>
 			</div>
 		</div>
@@ -102,14 +102,14 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">urlBase</label>
 				<div class="layui-input-inline">
-					<input type="text" name="urlBase" value="dnjd" class="layui-input">
+					<input type="text" name="urlBase" value="cms" class="layui-input">
 				</div>
 			</div>
 
 			<div class="layui-inline">
 				<label class="layui-form-label">system</label>
 				<div class="layui-input-inline">
-					<input type="text" name="entity.system" value="dnjd"
+					<input type="text" name="entity.system" value="cms"
 						class="layui-input">
 				</div>
 			</div>
