代码生成的时候选择自动配置工能点

--- a/admin-core/src/main/resources/templates/core/codeGen/edit.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/edit.html
@@ -141,6 +141,14 @@
 				</div>
 			</div>
 			
+			<div class="layui-inline">
+				<div class="layui-input-inline">
+					<input type="checkbox"
+					name="entity.autoAddFunction"
+					lay-skin="primary" value="true" title="自动配置到功能点"/>
+				</div>
+			</div>
+			
 		</div>
 
 	</div>
