add menu auto gen

--- a/admin-core/src/main/resources/templates/core/codeGen/edit.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/edit.html
@@ -145,9 +145,18 @@
 				<div class="layui-input-inline">
 					<input type="checkbox"
 					name="entity.autoAddFunction"
-					lay-skin="primary" value="true" title="自动配置到功能点"/>
+					lay-skin="primary" value="true" title=" 自动配置功能点"/>
+					
+				</div>
+				<div class="layui-input-inline">
+					<input type="checkbox"
+					name="entity.autoAddMenu"
+					lay-skin="primary" value="true" title="自动添加到菜单"/>
+					
 				</div>
 			</div>
+			
+			
 			
 		</div>
 
