--- a/admin-core/src/main/resources/templates/core/codeGen/edit.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/edit.html
@@ -151,7 +151,7 @@
 				<div class="layui-input-inline">
 					<input type="checkbox"
 					name="entity.autoAddMenu"
-					lay-skin="primary" value="true" title="自动添加到菜单"/>
+					lay-skin="primary" value="true" title="添加到菜单"/>
 					
 				</div>
 			</div>
