附件预览，如果修改过服务器地址和端口，预览不可用

--- a/admin-core/src/main/resources/templates/common/tag/attachment.tag.html
+++ b/admin-core/src/main/resources/templates/common/tag/attachment.tag.html
@@ -135,8 +135,7 @@ function() {
         tr.find('.demo-preview').on('click',
         function() {
             //文件下载地址
-            var file = encodeURIComponent("http://localhost:8080/core/file/download/"+fileId+"/${batchFileUUID}/"+fileName);
-           
+            var file = encodeURIComponent("http://" + window.location.host+"/core/file/download/"+fileId+"/${batchFileUUID}/"+fileName);
             //8012为预览服务器地址，参考 https://gitee.com/kekingcn/file-online-preview 安装
             Common.openDlg("${env('file.previewURL')}?url="+file,fileName+"预览")
             //window.open("http://localhost:8012/onlinePreview?url="+file);
