一个简单的crud完成！

--- a/admin-core/src/main/resources/templates/core/codeGen/edit.html
+++ b/admin-core/src/main/resources/templates/core/codeGen/edit.html
@@ -21,7 +21,7 @@
 			<div class="layui-inline">
 				<label class="layui-form-label">主键</label>
 				<div class="layui-input-inline">
-					<input type="text" name="entity.idAttribute.name" disable
+					<input type="text" name="entity.idAttribute.name" readonly="readonly"
 						value="${entity.idAttribute.name}" class="layui-input">
 				</div>
 			</div>
