--- a/test/src/main/resources/templates/users/users/add.html
+++ b/test/src/main/resources/templates/users/users/add.html
@@ -4,17 +4,21 @@
     <div class="layui-row">
         <div class="layui-form-item">
             <div class="layui-inline">
-            <label class="layui-form-label">id</label>
-				<div class="layui-input-inline">
-					<input type="text" name="id" class="layui-input" >
-				</div>
-            </div>
-            <div class="layui-inline">
             <label class="layui-form-label">name</label>
 				<div class="layui-input-inline">
 					<input type="text" name="name" class="layui-input" >
 				</div>
             </div>
+            <div class="layui-inline">
+            <label class="layui-form-label">gender</label>
+				<div class="layui-input-inline">
+					<input type="text" name="gender" class="layui-input" >
+				</div>
+            </div>
+        </div>
+    </div>
+    <div class="layui-row">
+        <div class="layui-form-item">
         </div>
     </div>
     <layui:submitButtons id="addButton" />
